apps/web/src/app/menu-desktop.module.css
.indicator {
  transition-property: all;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
}

@keyframes scaleIn {
  from {
    opacity: 0;
    transform: rotateX(-30deg) scale(0.9);
  }
  to {
    opacity: 1;
    transform: rotateX(0deg) scale(1);
  }
}

@keyframes scaleOut {
  from {
    opacity: 1;
    transform: rotateX(0deg) scale(1);
  }
  to {
    opacity: 0;
    transform: rotateX(-10deg) scale(0.95);
    display: none;
  }
}

.indicator[data-state='visible'] > div {
  animation: scaleIn 200ms ease;
}
.indicator[data-state='hidden'] > div {
  animation: scaleOut 200ms ease forwards;
}

.chevron,
.indicator {
  transition-property: all;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
}

.trigger[data-state='open'] .chevron {
  transform: rotate(180deg);
}

